# SmartLease_AI_Powered_Apartment_Search

./: README.md  control_execution.py  distance_agent.py  main.py  semantic_search.py  smartlease_fastapi.py  smartlease_streamlit_app.py
DataPrep_POC_EDA/: Project3_Data_EDA.ipynb  data_harvest.ipynb  pyproject.toml  step3_scrape_images.py
temp_data_store_json/: properties_with_distances.json  semantic_search_output.json
web_harvesting/: Dockerfile  config.toml  docker-compose.yml  step1_scrape_list.py  step2_scrape_details.py  step3_scrape_images.py
web_harvesting/airflow/: airflow.cfg
web_harvesting/airflow/dags/: web_harvesting_dag.py
